# openreality

./: .gitignore  README.md
docker/: Dockerfile.camera
python/app/: README.md  setup.py
python/app/examples/: framebuffer_to_file.py
python/app/openreality/: cube.py  main.py
python/app/openreality/app/core/: streamer.py
python/app/openreality/app/simple/: main.py
python/app/simple/: main.py
python/core/: pyproject.toml  pyproject.toml.bk  setup.py
python/core/camera/: pyproject.toml
python/core/camera/src/openreality/: camera.py  capture_process.py  stream.py
python/core/camera/tests/: dual_threaded_camera.py  gst_cam.py  process-cam.py  shared_memory_test.py  test_dual_cam.py
python/core/hands/tests/: hands.py
python/core/openreality/core/: capture.py
python/core/renderer/src/openreality/: .renderer.py.swp  renderer.py
python/core/renderer/tests/: gst_shm.py  streamer.py
python/core/src/: capture.py
python/core/src/openreality/: capture.py  streamer.py
python/core/src/openreality/core/: capture.py  streamer.py
python/examples/: config.toml  ipc_client.py  logger_client.py  read_config.py  screen_capture.py
python/examples/sdk/: camera_to_framebuffer.py  framebuffer_to_file.py  ipc_client.py  ipc_server.py
python/hands/: HandControlVolume.py
python/hands/tests/: hands.py
python/sdk/: README.md  setup.py
python/sdk/examples/: camera_to_framebuffer.py  framebuffer_to_file.py
python/sdk/openreality/sdk/: config.py  framebuffer.py  ipc.py  ipc.py.bk  log.py
python/sensors/: README.md  pyproject.toml  pyproject.toml.bk  setup.cfg  setup.py
python/sensors/openreality/sensors/: camera.py  camera_modes.py  jetson_camera.py  stereo_camera.py
python/sensors/openreality/sensors/cameras/: imx219.py
python/sensors/src/: camera.py
python/sensors/src/openreality/: camera.py
python/sensors/src/openreality/sensors/: camera.py  jetson_camera.py
scripts/: Dockerfile.opencv  Dockerfile.opencv.orangepi  Dockerfile.opencv.py311  Dockerfile.opencv.py36  opencv.sh
scripts/camera/: camera_simple_gst.py  test_cam.py  test_dual_cam.py
scripts/render/: streamer.py
system/services/: camera_capture.service  jetson_camera_capture.service  jetson_full_resolution_capture.service  left_camera.service
