[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
# This is the name of your project. The first time you publish this
# package, this name will be registered for you. It will determine how
# users can install this project, e.g.:
#
# $ pip install sampleproject
#
# And where it will live on PyPI: https://pypi.org/project/sampleproject/
#
# There are some restrictions on what makes a valid project name
# specification here:
# https://packaging.python.org/specifications/core-metadata/#name
name = "sampleproject"  # REQUIRED, is the only field that cannot be marked as dynamic.
version = "0.0.1"
description = "Open Reality sensor package that contains all kinds of cameras and sensors"
readme = "README.md"
requires-python = ">=3.10" # technically it can work with 3.8 and higher, but code is written up to 3.10 spec
license = {file = "LICENSE.txt"}
keywords = ["augmented reality", "vr", "ar", "openvr", "openxr"]
authors = [
  {name = "Dmitrii Gusev", email = "amidg4x4dima@gmail.com" }
]
maintainers = [
  {name = "Dmitrii Gusev", email = "amidg4x4dima@gmail.com" }
]
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",

  # Indicate who your project is intended for
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",

  # Pick your license as you wish
  "License :: OSI Approved :: GPL-3.0-or-later",

  # Specify the Python versions you support here. In particular, ensure
  # that you indicate you support Python 3. These classifiers are *not*
  # checked by "pip install". See instead "requires-python" key in this file.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
  "opencv-contrib-python==4.9.0.80+openreality",
  "numpy"
]

# List additional groups of dependencies here (e.g. development
# dependencies). Users will be able to install these using the "extras"
# syntax, for example:
#
#   $ pip install sampleproject[dev]
#
# Optional dependencies the project provides. These are commonly 
# referred to as "extras". For a more extensive definition see:
# https://packaging.python.org/en/latest/specifications/dependency-specifiers/#extras
#[project.optional-dependencies]
#dev = ["check-manifest"]
#test = ["coverage"]

[project.urls]
Homepage = "https://github.com/amidg/openreality"
Issues = "https://github.com/amidg/openreality/issues"

[project.scripts]
camera_demo = "sensors.camera:main"
