[metadata]
name = camera
version = attr: example.__version__
author = Dmitrii Gusev
author_email = amidg4x4dima@gmail.com
description = OpenReality Camera module
long_description = file: README.md
long_description_content_type = text/markdown
keywords = opencv, camera, vr
#license = GPLv3
#classifiers =
#    License :: OSI Approved :: BSD License
#    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    opencv-contrib-python == 4.9.0.80+gstreamer
    numpy

[options.entry_points]
console_scripts = 
    camera_demo = openreality.camera:main
