[metadata]
name = sensors
version = attr: openreality.__version__
author = Dmitrii Gusev
author_email = amidg4x4dima@gmail.com
description = OpenReality Sensor Module. This package includes all kinds of sensors such as cameras, accelerometers, depth cameras, etc
long_description = file: README.md
long_description_content_type = text/markdown
keywords = opencv, camera, vr
license = "GPL-3.0-or-later"

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    opencv-contrib-python == 4.9.0.80+openreality
    numpy

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
    camera_demo = openreality.camera:main
